HomeWork 04-Advance Promise Resuelta

--- a/04-AdvancePromises/homework/01 - Exercises/SpecRunner.html
+++ b/04-AdvancePromises/homework/01 - Exercises/SpecRunner.html
@@ -18,6 +18,7 @@
   <!-- jshint:js -->
 
   <!-- inject:js -->
+  <script src="src/pledge copy.js"></script>
   <script src="src/pledge.js"></script>
   <script src="utils/custom.matchers.js"></script>
   <script src="test/pledge.spec.ch1.js"></script>
